Correct duplicate property 'text-align'

--- a/src/checklist/static/assets/css/style.css
+++ b/src/checklist/static/assets/css/style.css
@@ -712,7 +712,6 @@ ul.navbar-nav li a:focus { background: none; color:#3D2BA5; outline: 0; }
 #myFooter .second-bar {
     text-align: center;
     background-color: #FFBC4B;
-	text-align: center;
 	bottom: 0;
 }
 
